--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,66 @@
-Automat==0.8.0
-blinker==1.4
-certifi==2019.11.28
-Click==7.0
-cloud-init==21.2
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-cryptography==2.8
-dbus-python==1.2.16
-distro==1.4.0
-distro-info===0.23ubuntu1
-entrypoints==0.3
-httplib2==0.14.0
-hyperlink==19.0.0
-importlib-metadata==1.5.0
-incremental==16.10.1
-Jinja2==2.10.1
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-MarkupSafe==1.1.0
-more-itertools==4.2.0
-netifaces==0.10.4
-oauthlib==3.1.0
-pexpect==4.6.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyrsistent==0.15.5
-pyserial==3.4
-python-apt==2.0.0+ubuntu0.20.4.5
-python-debian===0.1.36ubuntu1
-PyYAML==5.3.1
-requests==2.22.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-service-identity==18.1.0
-simplejson==3.16.0
-six==1.14.0
-sos==4.1
-ssh-import-id==5.10
-systemd-python==234
-Twisted==18.9.0
-ubuntu-advantage-tools==27.0
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-wadllib==1.3.3
-zipp==1.0.0
-zope.interface==4.7.1
+absl-py==1.0.0
+ale-py==0.7.3
+astunparse==1.6.3
+atari-py==0.2.9
+cachetools==4.2.4
+certifi==2021.10.8
+charset-normalizer==2.0.9
+cloudpickle==1.6.0
+cycler==0.11.0
+flatbuffers==2.0
+fonttools==4.28.3
+gast==0.4.0
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.42.0
+gym==0.19.0
+-e git+git@github.com:deval-patel/sokobanRL.git@c15a773f5b70d2129a61b707ecc6be91647f68d7#egg=gym_498_sokoban
+h5py==3.6.0
+idna==3.3
+importlib-metadata==4.8.2
+importlib-resources==5.4.0
+joblib==1.1.0
+keras==2.7.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
+libclang==12.0.0
+Markdown==3.3.6
+matplotlib==3.5.1
+mpi4py==3.1.3
+numpy==1.21.4
+oauthlib==3.1.1
+opencv-python==4.5.4.60
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.3.5
+Pillow==8.4.0
+protobuf==3.19.1
+psutil==5.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pygame==2.1.0
+pyglet==1.5.21
+pyparsing==3.0.6
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.8
+scipy==1.7.3
+six==1.16.0
+stable-baselines==2.10.2
+stable-baselines3==1.3.0
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.7.0
+tensorflow-estimator==2.7.0
+tensorflow-io-gcs-filesystem==0.22.0
+termcolor==1.1.0
+torch==1.10.0
+typing-extensions==4.0.1
+urllib3==1.26.7
+Werkzeug==2.0.2
+wrapt==1.13.3
+zipp==3.6.0
